; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_s3c-hsudc.c_s3c_hsudc_setup_ep.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/gadget/udc/extr_s3c-hsudc.c_s3c_hsudc_setup_ep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s3c_hsudc = type { i32*, %struct.TYPE_4__*, %struct.TYPE_3__, i32 }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

@WAIT_FOR_SETUP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.s3c_hsudc*)* @s3c_hsudc_setup_ep to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @s3c_hsudc_setup_ep(%struct.s3c_hsudc* %0) #0 {
  %2 = alloca %struct.s3c_hsudc*, align 8
  %3 = alloca i32, align 4
  store %struct.s3c_hsudc* %0, %struct.s3c_hsudc** %2, align 8
  %4 = load i32, i32* @WAIT_FOR_SETUP, align 4
  %5 = load %struct.s3c_hsudc*, %struct.s3c_hsudc** %2, align 8
  %6 = getelementptr inbounds %struct.s3c_hsudc, %struct.s3c_hsudc* %5, i32 0, i32 3
  store i32 %4, i32* %6, align 4
  %7 = load %struct.s3c_hsudc*, %struct.s3c_hsudc** %2, align 8
  %8 = getelementptr inbounds %struct.s3c_hsudc, %struct.s3c_hsudc* %7, i32 0, i32 2
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = call i32 @INIT_LIST_HEAD(i32* %9)
  store i32 0, i32* %3, align 4
  br label %11

11:                                               ; preds = %29, %1
  %12 = load i32, i32* %3, align 4
  %13 = load %struct.s3c_hsudc*, %struct.s3c_hsudc** %2, align 8
  %14 = getelementptr inbounds %struct.s3c_hsudc, %struct.s3c_hsudc* %13, i32 0, i32 1
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = icmp slt i32 %12, %17
  br i1 %18, label %19, label %32

19:                                               ; preds = %11
  %20 = load %struct.s3c_hsudc*, %struct.s3c_hsudc** %2, align 8
  %21 = load %struct.s3c_hsudc*, %struct.s3c_hsudc** %2, align 8
  %22 = getelementptr inbounds %struct.s3c_hsudc, %struct.s3c_hsudc* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = load i32, i32* %3, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i32, i32* %23, i64 %25
  %27 = load i32, i32* %3, align 4
  %28 = call i32 @s3c_hsudc_initep(%struct.s3c_hsudc* %20, i32* %26, i32 %27)
  br label %29

29:                                               ; preds = %19
  %30 = load i32, i32* %3, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %3, align 4
  br label %11

32:                                               ; preds = %11
  ret void
}

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local i32 @s3c_hsudc_initep(%struct.s3c_hsudc*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
